fix: fixed the snake-flicker issue

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 
 @keyframes upMove {
     0% {
-      transform: translateY(0px);
+      transform: translateY(0%, -30%);
     }
     100% {
         transform: translateY(-800px)
